Auxiliary commit to cherry-pick individual files from 9c2d7335b4376f5a7def21315479ebe905ce1893